[gd_scene load_steps=18 format=3 uid="uid://b0t75hmsf5txv"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1_dpnha"]
[ext_resource type="PackedScene" uid="uid://btknduttnmoxf" path="res://addons/godot-xr-tools/misc/vr_common_shader_cache.tscn" id="2_wb3xa"]
[ext_resource type="PackedScene" uid="uid://cywxx6drva3wo" path="res://scenes/player/hands/right_ghost_hand.tscn" id="3_xp54x"]
[ext_resource type="PackedScene" uid="uid://b6bk2pj8vbj28" path="res://addons/godot-xr-tools/functions/movement_turn.tscn" id="4_nsahm"]
[ext_resource type="Script" path="res://scripts/utils/function_pickup.gd" id="5_pn4k0"]
[ext_resource type="PackedScene" uid="uid://cqhw276realc" path="res://addons/godot-xr-tools/functions/function_pointer.tscn" id="6_6nv2j"]
[ext_resource type="Material" path="res://addons/godot-xr-tools/materials/pointer.tres" id="7_3qa04"]
[ext_resource type="PackedScene" uid="uid://difr003pluy10" path="res://scenes/player/hands/right_physics_hand_v1.tscn" id="7_ujwnk"]
[ext_resource type="PackedScene" uid="uid://bl2nuu3qhlb5k" path="res://addons/godot-xr-tools/functions/movement_direct.tscn" id="9_cbg1h"]
[ext_resource type="PackedScene" uid="uid://dl1miotgluu08" path="res://scenes/player/hands/left_physics_hand_v1.tscn" id="9_isomr"]
[ext_resource type="PackedScene" uid="uid://mx6owhjjvnc8" path="res://scenes/player/hands/left_ghost_hand.tscn" id="9_vy2ea"]
[ext_resource type="PackedScene" uid="uid://fiul51tsyoop" path="res://addons/godot-xr-tools/functions/function_teleport.tscn" id="10_fxqs6"]
[ext_resource type="PackedScene" uid="uid://c2q5phg8w08o" path="res://addons/godot-xr-tools/functions/movement_jump.tscn" id="11_xlbbe"]
[ext_resource type="PackedScene" uid="uid://clujaf3u776a3" path="res://addons/godot-xr-tools/objects/viewport_2d_in_3d.tscn" id="12_editf"]
[ext_resource type="PackedScene" uid="uid://dphcujw0jaqld" path="res://scenes/utils/fps_counter.tscn" id="13_45c4y"]
[ext_resource type="PackedScene" uid="uid://diyu06cw06syv" path="res://addons/godot-xr-tools/player/player_body.tscn" id="14_1b86k"]
[ext_resource type="Script" path="res://scripts/player/player_body.gd" id="16_inuc8"]

[node name="XROrigin3D" type="XROrigin3D" groups=["player"]]
process_mode = 3
current = true
script = ExtResource("1_dpnha")

[node name="XRCamera3D" type="XRCamera3D" parent="."]
process_mode = 3
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.9, 0)
current = true

[node name="XRToolsShaderCache" parent="XRCamera3D" instance=ExtResource("2_wb3xa")]
process_mode = 3

[node name="RightHandController" type="XRController3D" parent="." groups=["hand"]]
process_mode = 3
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.5, 1.5, -0.5)
tracker = &"right_hand"

[node name="RightGhostHand" parent="RightHandController" instance=ExtResource("3_xp54x")]

[node name="RightPhysicsHand" parent="RightHandController" instance=ExtResource("7_ujwnk")]
freeze = false

[node name="FunctionPickupRight" type="Node3D" parent="RightHandController/RightPhysicsHand"]
script = ExtResource("5_pn4k0")
grab_distance = 0.2
grab_collision_mask = 328708
ranged_enable = false
ranged_distance = 2.0
ranged_collision_mask = 1028

[node name="MovementTurn" parent="RightHandController" instance=ExtResource("4_nsahm")]
process_mode = 1
step_turn_angle = 45.0

[node name="FunctionPointerRight" parent="RightHandController" instance=ExtResource("6_6nv2j")]
enabled = false
distance = 2.0
show_laser = 0
laser_length = 1
laser_material = ExtResource("7_3qa04")
show_target = true
collision_mask = 5242884

[node name="LeftHandController" type="XRController3D" parent="." groups=["hand"]]
process_mode = 3
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.5, 1.5, -0.5)
tracker = &"left_hand"

[node name="LeftGhostHand" parent="LeftHandController" instance=ExtResource("9_vy2ea")]

[node name="LeftPhysicsHand" parent="LeftHandController" instance=ExtResource("9_isomr")]
freeze = false

[node name="FunctionPickupLeft" type="Node3D" parent="LeftHandController/LeftPhysicsHand"]
script = ExtResource("5_pn4k0")
grab_distance = 0.2
grab_collision_mask = 328708
ranged_enable = false
ranged_distance = 2.0
ranged_collision_mask = 1028

[node name="MovementDirect" parent="LeftHandController" instance=ExtResource("9_cbg1h")]
strafe = true

[node name="FunctionTeleport" parent="LeftHandController" instance=ExtResource("10_fxqs6")]

[node name="FunctionPointerLeft" parent="LeftHandController" instance=ExtResource("6_6nv2j")]
enabled = false
distance = 2.0
laser_length = 1
laser_material = ExtResource("7_3qa04")
show_target = true
collision_mask = 5242884

[node name="MovementJump" parent="LeftHandController" instance=ExtResource("11_xlbbe")]
jump_button_action = "by_button"

[node name="FpsCounterViewport" parent="LeftHandController" instance=ExtResource("12_editf")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 0.15, 0)
screen_size = Vector2(0.3, 0.1)
collision_layer = 0
scene = ExtResource("13_45c4y")
viewport_size = Vector2(1152, 648)
throttle_fps = 3.0
input_keyboard = false
scene_properties_keys = PackedStringArray("fps_counter.gd")

[node name="PlayerBody" parent="." instance=ExtResource("14_1b86k")]
process_mode = 1
collision_mask = 1019
script = ExtResource("16_inuc8")
water_emergence_acceleration = 5.0
water_max_emergence_velocity = 2.0
water_bobbing_amplitude = 0.2
_water_bobbing_frequency = 0.8
